<resources>
    <string name="app_name">ShoppingList</string>
    <string name="header_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="txt_item_added">Item added</string>
    <string name="txt_add_cancel">Item adding cancelled</string>
    <string name="action_cancel">Cancel</string>
    <string name="txt_item_edited">Item edited!</string>
    <string name="txt_about">This app was made for AIT Mobile Course!</string>
    <string name="txt_help">Use the touch controls to work with the application.</string>
    <string name="action_hide">Hide</string>
    <string name="delete_all">Delete All</string>
    <string name="new_item">New Item</string>
    <string name="save_item">Save</string>
    <string name="cb_is_bought">Has been bought</string>
    <string name="item_price">Price</string>
    <string name="item_description">Description</string>
    <string name="item_name">Item name</string>
    <string name="item_type">Item type:</string>
    <string name="splash_title">SHOPPING LIST</string>
    <string name="bought_item">Bought</string>
    <string name="delete_item">Delete</string>
    <string name="edit_item">Edit</string>
    <string name="item">Item</string>


</resources>
