<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_type" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name" />

    <EditText
        android:id="@+id/etItemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_description" />

    <EditText
        android:id="@+id/etItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_price" />

    <CheckBox
        android:id="@+id/cbItemBought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_is_bought" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_item" />

</LinearLayout>
